--- a/package.json
+++ b/package.json
@@ -11,13 +11,16 @@
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
     "format": "prettier \"src/**/*.{ts,tsx,css,md}\" --write",
-    "format:check": "prettier \"src/**/*.{ts,tsx,css,md}\" --check"
+    "format:check": "prettier \"src/**/*.{ts,tsx,css,md}\" --check",
+    "lint:biome": "biome check .",
+    "lint:biome:fix": "biome check . --write"
   },
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^2.3.7",
     "@chromatic-com/storybook": "^4.1.3",
     "@eslint/js": "^9.39.1",
     "@storybook/addon-a11y": "^10.0.8",
