feat(animations): add Framer Motion animations and update docs

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
   "dependencies": {
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-hook-form": "^7.66.1"
+    "react-hook-form": "^7.66.1",
+    "framer-motion": "^11.11.4"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.7",
