--- a/biome.json
+++ b/biome.json
@@ -2,7 +2,13 @@
   "$schema": "https://biomejs.dev/schemas/2.3.7/schema.json",
   "root": true,
   "files": {
-    "ignoreUnknown": true
+    "ignoreUnknown": true,
+    "includes": [
+      "**",
+      "!!**/dist",
+      "!!**/coverage",
+      "!!**/storybook-static"
+    ]
   },
   "formatter": {
     "enabled": false
