--- a/package.json
+++ b/package.json
@@ -13,13 +13,18 @@
     "format": "prettier \"src/**/*.{ts,tsx,css,md}\" --write",
     "format:check": "prettier \"src/**/*.{ts,tsx,css,md}\" --check",
     "lint:biome": "biome check .",
-    "lint:biome:fix": "biome check . --write"
+    "typecheck": "tsc -b --pretty false",
+    "test": "vitest run",
+    "test:watch": "vitest",
+    "test:coverage": "vitest run --coverage",
+    "lint:biome:fix": "biome check . --write",
+    "check": "npm run lint && npm run lint:biome && npm run typecheck && npm run test && npm run build && npm run build-storybook"
   },
   "dependencies": {
+    "framer-motion": "^11.11.4",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
-    "react-hook-form": "^7.66.1",
-    "framer-motion": "^11.11.4"
+    "react-hook-form": "^7.66.1"
   },
   "devDependencies": {
     "@biomejs/biome": "^2.3.7",
